#248 - Fix footer alignment on all screens.

--- a/src/Recollections.Blazor.UI/wwwroot/css/site.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.scss
@@ -229,7 +229,7 @@ a {
     }
 }
 
-@media (max-width:490px) {
+@media (max-width:510px) {
     footer {
         font-size: 13px;
 
